--- a/Store.Model/Store.Model.csproj
+++ b/Store.Model/Store.Model.csproj
@@ -42,19 +42,6 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Models\Admin.cs" />
-    <Compile Include="Models\Class1.cs" />
-    <Compile Include="Models\Doclie.cs" />
-    <Compile Include="Models\Doclieart.cs" />
-    <Compile Include="Models\Impression.cs" />
-    <Compile Include="Models\Licence.cs" />
-    <Compile Include="Models\Marque.cs" />
-    <Compile Include="Models\Opportunite.cs" />
-    <Compile Include="Models\Paiement.cs" />
-    <Compile Include="Models\Periode.cs" />
-    <Compile Include="Models\FicheTiers.cs" />
-    <Compile Include="Models\Tolerance.cs" />
-    <Compile Include="Models\Tva.cs" />
-    <Compile Include="Models\Unite.cs" />
     <Compile Include="Models\Affaire.cs" />
     <Compile Include="Models\Articles.cs" />
     <Compile Include="Models\ArticlesKits.cs" />
@@ -64,11 +51,38 @@
     <Compile Include="Models\Depot.cs" />
     <Compile Include="Models\DepotContact.cs" />
     <Compile Include="Models\Devises.cs" />
+    <Compile Include="Models\Doclie.cs" />
+    <Compile Include="Models\Doclieart.cs" />
     <Compile Include="Models\DocumentCommercial.cs" />
     <Compile Include="Models\DocumentCommercialDetail.cs" />
     <Compile Include="Models\DocumentCommercialDetailSerie.cs" />
     <Compile Include="Models\Famille.cs" />
+    <Compile Include="Models\Fichetiers.cs" />
+    <Compile Include="Models\FichetiersRepresentants.cs" />
+    <Compile Include="Models\FichetiersContact.cs" />
+    <Compile Include="Models\FournisseurArticle.cs" />
+    <Compile Include="Models\Ged.cs" />
+    <Compile Include="Models\GEN_Items.cs" />
+    <Compile Include="Models\GEN_Model.cs" />
+    <Compile Include="Models\Motif.cs" />
+    <Compile Include="Models\MotifTicket.cs" />
+    <Compile Include="Models\MouvementStock.cs" />
+    <Compile Include="Models\Nomenclature.cs" />
+    <Compile Include="Models\Numerotation.cs" />
+    <Compile Include="Models\Objectif.cs" />
+    <Compile Include="Models\Opportunite.cs" />
+    <Compile Include="Models\OpportuniteDetail.cs" />
+    <Compile Include="Models\Paiement.cs" />
+    <Compile Include="Models\Parametrage.cs" />
+    <Compile Include="Models\Periode.cs" />
+    <Compile Include="Models\Profil.cs" />
+    <Compile Include="Models\ProfilDetail.cs" />
+    <Compile Include="Models\Reglement.cs" />
+    <Compile Include="Models\ReglementFacture.cs" />
+    <Compile Include="Models\Representant.cs" />
     <Compile Include="Models\Societe.cs" />
+    <Compile Include="Models\Ticket.cs" />
+    <Compile Include="Models\TicketDetail.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
