--- a/Store.Data/Store.Data.csproj
+++ b/Store.Data/Store.Data.csproj
@@ -50,9 +50,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
-<<<<<<< HEAD
+    <!--<<<<<<< HEAD-->
     <Compile Include="Configuration\FichetiersConfiguration.cs" />
-=======
+<!--=======-->
     <Compile Include="Configuration\AdminConfiguration.cs" />
     <Compile Include="Configuration\AffaireConfiguration.cs" />
     <Compile Include="Configuration\ArticlesConfiguration.cs" />
@@ -69,7 +69,7 @@
     <Compile Include="Configuration\DocumentCommercialDetailConfiguration.cs" />
     <Compile Include="Configuration\DocumentCommercialDetailSerieConfiguration.cs" />
     <Compile Include="Configuration\FamilleConfiguration.cs" />
->>>>>>> 2267e92627d70391d6d45f5590325e078926f7fb
+<!-->>>>>>> 2267e92627d70391d6d45f5590325e078926f7fb-->
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StoreEntities.cs" />
     <Compile Include="StoreSeedData.cs" />
@@ -87,11 +87,11 @@
       <Name>Store.Model</Name>
     </ProjectReference>
   </ItemGroup>
-<<<<<<< HEAD
+<!-- <<<<<<< HEAD!-->
   <ItemGroup>
     <Folder Include="Repositories\" />
   </ItemGroup>
-=======
->>>>>>> 2267e92627d70391d6d45f5590325e078926f7fb
+<!--=======!-->
+<!-->>>>>>> 2267e92627d70391d6d45f5590325e078926f7fb-->
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
