--- a/Store.Data/Store.Data.csproj
+++ b/Store.Data/Store.Data.csproj
@@ -52,7 +52,7 @@
     <Compile Include="Class1.cs" />
     <!--<<<<<<< HEAD-->
     <Compile Include="Configuration\FichetiersConfiguration.cs" />
-<!--=======-->
+    <!--=======-->
     <Compile Include="Configuration\AdminConfiguration.cs" />
     <Compile Include="Configuration\AffaireConfiguration.cs" />
     <Compile Include="Configuration\ArticlesConfiguration.cs" />
@@ -69,8 +69,62 @@
     <Compile Include="Configuration\DocumentCommercialDetailConfiguration.cs" />
     <Compile Include="Configuration\DocumentCommercialDetailSerieConfiguration.cs" />
     <Compile Include="Configuration\FamilleConfiguration.cs" />
-<!-->>>>>>> 2267e92627d70391d6d45f5590325e078926f7fb-->
+    <!-->>>>>>> 2267e92627d70391d6d45f5590325e078926f7fb-->
+    <Compile Include="Configuration\FichetiersContactConfiguration.cs" />
+    <Compile Include="Configuration\FichetiersRepresentantsConfiguration.cs" />
+    <Compile Include="Configuration\FournisseurArticleConfiguration.cs" />
+    <Compile Include="Configuration\GedConfiguration.cs" />
+    <Compile Include="Configuration\MotifConfiguration.cs" />
+    <Compile Include="Configuration\MotifTicketConfiguration.cs" />
+    <Compile Include="Configuration\MouvementStockConfiguration.cs" />
+    <Compile Include="Configuration\NomenclatureConfiguration.cs" />
+    <Compile Include="Configuration\NumerotationConfiguration.cs" />
+    <Compile Include="Configuration\ObjectifConfiguration.cs" />
+    <Compile Include="Configuration\OpportuniteConfiguration.cs" />
+    <Compile Include="Configuration\OpportuniteDetailConfiguration.cs" />
+    <Compile Include="Configuration\PaiementConfiguration.cs" />
+    <Compile Include="Configuration\ParametrageConfiguration.cs" />
+    <Compile Include="Configuration\PeriodeConfiguration.cs" />
+    <Compile Include="Configuration\ProfilConfiguration.cs" />
+    <Compile Include="Configuration\ProfilDetailConfiguration.cs" />
+    <Compile Include="Configuration\ReglementConfiguration.cs" />
+    <Compile Include="Configuration\ReglementFactureConfiguration.cs" />
+    <Compile Include="Configuration\RepresentantConfiguration.cs" />
+    <Compile Include="Configuration\SocieteConfiguration.cs" />
+    <Compile Include="Configuration\TicketConfiguration.cs" />
+    <Compile Include="Configuration\TicketDetailConfiguration.cs" />
+    <Compile Include="Infrastructure\DbFactory.cs" />
+    <Compile Include="Infrastructure\Disposable.cs" />
+    <Compile Include="Infrastructure\IDbFactory.cs" />
+    <Compile Include="Infrastructure\IUnitOfWork.cs" />
+    <Compile Include="Infrastructure\RepositoryBase.cs" />
+    <Compile Include="Infrastructure\UnitOfWork.cs" />
+    <Compile Include="IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\FichetierRepository.cs" />
+    <Compile Include="Repositories\FichetiersContactRepository.cs" />
+    <Compile Include="Repositories\FichetiersRepresentantRepository.cs" />
+    <Compile Include="Repositories\FournisseurArticleRepository.cs" />
+    <Compile Include="Repositories\GedRepository.cs" />
+    <Compile Include="Repositories\MotifRepository.cs" />
+    <Compile Include="Repositories\MotifTicketRepository.cs" />
+    <Compile Include="Repositories\MouvementStockRepository.cs" />
+    <Compile Include="Repositories\NomenclatureRepository.cs" />
+    <Compile Include="Repositories\NumerotationRepository.cs" />
+    <Compile Include="Repositories\ObjectifRepository.cs" />
+    <Compile Include="Repositories\OpportuniteDetailRepository.cs" />
+    <Compile Include="Repositories\OpportuniteRepository.cs" />
+    <Compile Include="Repositories\PaiementRepository.cs" />
+    <Compile Include="Repositories\ParametrageRepository.cs" />
+    <Compile Include="Repositories\PeriodeRepository.cs" />
+    <Compile Include="Repositories\ProfilDetailRepository.cs" />
+    <Compile Include="Repositories\ProfilRepository.cs" />
+    <Compile Include="Repositories\ReglementFactureRepository.cs" />
+    <Compile Include="Repositories\ReglementRepository.cs" />
+    <Compile Include="Repositories\RepresentantRepository.cs" />
+    <Compile Include="Repositories\SocieteRepository.cs" />
+    <Compile Include="Repositories\TicketDetailRepository.cs" />
+    <Compile Include="Repositories\TicketRepository.cs" />
     <Compile Include="StoreEntities.cs" />
     <Compile Include="StoreSeedData.cs" />
   </ItemGroup>
@@ -78,20 +132,16 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Repositories\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Store.Model\Store.Model.csproj">
       <Project>{ed1007b2-1f19-4a8b-8b98-1e24b4b4cf2b}</Project>
       <Name>Store.Model</Name>
     </ProjectReference>
   </ItemGroup>
-<!-- <<<<<<< HEAD!-->
-  <ItemGroup>
-    <Folder Include="Repositories\" />
-  </ItemGroup>
-<!--=======!-->
-<!-->>>>>>> 2267e92627d70391d6d45f5590325e078926f7fb-->
+  <!-- <<<<<<< HEAD!-->
+  <ItemGroup />
+  <!--=======!-->
+  <!-->>>>>>> 2267e92627d70391d6d45f5590325e078926f7fb-->
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
