--- a/Store.Data/Store.Data.csproj
+++ b/Store.Data/Store.Data.csproj
@@ -50,26 +50,32 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Configuration\ToleranceConfiguration.cs" />
     <!--<<<<<<< HEAD-->
     <Compile Include="Configuration\FichetiersConfiguration.cs" />
-<!--=======-->
+    <!--=======-->
     <Compile Include="Configuration\AdminConfiguration.cs" />
     <Compile Include="Configuration\AffaireConfiguration.cs" />
-    <Compile Include="Configuration\ArticlesConfiguration.cs" />
-    <Compile Include="Configuration\ArticlesKitsConfiguration.cs" />
+    <Compile Include="Configuration\ArticleConfiguration.cs" />
+    <Compile Include="Configuration\ArticlesKitConfiguration.cs" />
     <Compile Include="Configuration\ArticlesPrixConfiguration.cs" />
     <Compile Include="Configuration\CategorieConfiguration.cs" />
     <Compile Include="Configuration\CrmContactConfiguration.cs" />
     <Compile Include="Configuration\DepotConfiguration.cs" />
     <Compile Include="Configuration\DepotContactConfiguration.cs" />
-    <Compile Include="Configuration\DevisesConfiguration.cs" />
+    <Compile Include="Configuration\DeviseConfiguration.cs" />
     <Compile Include="Configuration\DoclieartConfiguration.cs" />
     <Compile Include="Configuration\DoclieConfiguration.cs" />
     <Compile Include="Configuration\DocumentCommercialConfiguration.cs" />
     <Compile Include="Configuration\DocumentCommercialDetailConfiguration.cs" />
     <Compile Include="Configuration\DocumentCommercialDetailSerieConfiguration.cs" />
     <Compile Include="Configuration\FamilleConfiguration.cs" />
-<!-->>>>>>> 2267e92627d70391d6d45f5590325e078926f7fb-->
+    <Compile Include="Configuration\ImpressionConfiguration.cs" />
+    <Compile Include="Configuration\LicenceConfiguration.cs" />
+    <Compile Include="Configuration\MarqueConfiguration.cs" />
+    <Compile Include="Configuration\TvaConfiguration.cs" />
+    <Compile Include="Configuration\UniteConfiguration.cs" />
+    <!-->>>>>>> 2267e92627d70391d6d45f5590325e078926f7fb-->
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StoreEntities.cs" />
     <Compile Include="StoreSeedData.cs" />
@@ -81,17 +87,14 @@
   <ItemGroup>
     <Folder Include="Repositories\" />
   </ItemGroup>
+  <!-- <<<<<<< HEAD!-->
   <ItemGroup>
     <ProjectReference Include="..\Store.Model\Store.Model.csproj">
       <Project>{ed1007b2-1f19-4a8b-8b98-1e24b4b4cf2b}</Project>
       <Name>Store.Model</Name>
     </ProjectReference>
   </ItemGroup>
-<!-- <<<<<<< HEAD!-->
-  <ItemGroup>
-    <Folder Include="Repositories\" />
-  </ItemGroup>
-<!--=======!-->
-<!-->>>>>>> 2267e92627d70391d6d45f5590325e078926f7fb-->
+  <!--=======!-->
+  <!-->>>>>>> 2267e92627d70391d6d45f5590325e078926f7fb-->
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
