--- a/Store.Model/Store.Model.csproj
+++ b/Store.Model/Store.Model.csproj
@@ -42,14 +42,14 @@
   <ItemGroup>
     <Compile Include="Models\Admin.cs" />
     <Compile Include="Models\Affaire.cs" />
-    <Compile Include="Models\Articles.cs" />
-    <Compile Include="Models\ArticlesKits.cs" />
+    <Compile Include="Models\Article.cs" />
+    <Compile Include="Models\ArticlesKit.cs" />
     <Compile Include="Models\ArticlesPrix.cs" />
     <Compile Include="Models\Categorie.cs" />
     <Compile Include="Models\CrmContact.cs" />
     <Compile Include="Models\Depot.cs" />
     <Compile Include="Models\DepotContact.cs" />
-    <Compile Include="Models\Devises.cs" />
+    <Compile Include="Models\Devise.cs" />
     <Compile Include="Models\Doclie.cs" />
     <Compile Include="Models\Doclieart.cs" />
     <Compile Include="Models\DocumentCommercial.cs" />
