--- a/Store.Data/Store.Data.csproj
+++ b/Store.Data/Store.Data.csproj
@@ -50,24 +50,24 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
-    <Compile Include="Configuration\ToleranceConfiguration.cs" />
+    <Compile Include="Configuration\GES_ToleranceConfiguration.cs" />
     <!--<<<<<<< HEAD-->
     <Compile Include="Configuration\FichetiersConfiguration.cs" />
     <!--=======-->
-    <Compile Include="Configuration\AdminConfiguration.cs" />
-    <Compile Include="Configuration\AffaireConfiguration.cs" />
-    <Compile Include="Configuration\ArticleConfiguration.cs" />
-    <Compile Include="Configuration\ArticlesKitConfiguration.cs" />
-    <Compile Include="Configuration\ArticlesPrixConfiguration.cs" />
-    <Compile Include="Configuration\CategorieConfiguration.cs" />
+    <Compile Include="Configuration\GES_AdminConfiguration.cs" />
+    <Compile Include="Configuration\GES_AffaireConfiguration.cs" />
+    <Compile Include="Configuration\GES_ArticleConfiguration.cs" />
+    <Compile Include="Configuration\GES_ArticlesKitConfiguration.cs" />
+    <Compile Include="Configuration\GES_ArticlesPrixConfiguration.cs" />
+    <Compile Include="Configuration\GES_CategorieConfiguration.cs" />
     <Compile Include="Configuration\CrmContactConfiguration.cs" />
-    <Compile Include="Configuration\DepotConfiguration.cs" />
+    <Compile Include="Configuration\GES_DepotConfiguration.cs" />
     <Compile Include="Configuration\DepotContactConfiguration.cs" />
-    <Compile Include="Configuration\DeviseConfiguration.cs" />
-    <Compile Include="Configuration\DoclieartConfiguration.cs" />
-    <Compile Include="Configuration\DoclieConfiguration.cs" />
-    <Compile Include="Configuration\DocumentCommercialConfiguration.cs" />
-    <Compile Include="Configuration\DocumentCommercialDetailConfiguration.cs" />
+    <Compile Include="Configuration\GES_DeviseConfiguration.cs" />
+    <Compile Include="Configuration\GES_DoclieartConfiguration.cs" />
+    <Compile Include="Configuration\GES_DoclieConfiguration.cs" />
+    <Compile Include="Configuration\GES_DocumentCommercialConfiguration.cs" />
+    <Compile Include="Configuration\GES_DocumentCommercialDetailConfiguration.cs" />
     <Compile Include="Configuration\DocumentCommercialDetailSerieConfiguration.cs" />
     <Compile Include="Configuration\FamilleConfiguration.cs" />
     <!-->>>>>>> 2267e92627d70391d6d45f5590325e078926f7fb-->
@@ -100,19 +100,35 @@
     <Compile Include="Infrastructure\IUnitOfWork.cs" />
     <Compile Include="Infrastructure\RepositoryBase.cs" />
     <Compile Include="Infrastructure\UnitOfWork.cs" />
-    <Compile Include="IRepository.cs" />
-    <Compile Include="Configuration\ImpressionConfiguration.cs" />
-    <Compile Include="Configuration\LicenceConfiguration.cs" />
-    <Compile Include="Configuration\MarqueConfiguration.cs" />
-    <Compile Include="Configuration\TvaConfiguration.cs" />
-    <Compile Include="Configuration\UniteConfiguration.cs" />
+    <Compile Include="Infrastructure\IRepository.cs" />
+    <Compile Include="Configuration\GES_ImpressionConfiguration.cs" />
+    <Compile Include="Configuration\GES_LicenceConfiguration.cs" />
+    <Compile Include="Configuration\GES_MarqueConfiguration.cs" />
+    <Compile Include="Configuration\GES_TvaConfiguration.cs" />
+    <Compile Include="Configuration\GES_UniteConfiguration.cs" />
     <!-->>>>>>> 2267e92627d70391d6d45f5590325e078926f7fb-->
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\AdminRepository.cs" />
+    <Compile Include="Repositories\AffaireRepository.cs" />
+    <Compile Include="Repositories\ArticleRepository.cs" />
+    <Compile Include="Repositories\ArticlesKitRepository.cs" />
+    <Compile Include="Repositories\ArticlesPrixRepository.cs" />
+    <Compile Include="Repositories\CategorieRepository.cs" />
+    <Compile Include="Repositories\DepotRepository.cs" />
+    <Compile Include="Repositories\DoclieartRepoitory.cs" />
+    <Compile Include="Repositories\DoclieRepository.cs" />
+    <Compile Include="Repositories\DocumentCommercialDetailRepository.cs" />
+    <Compile Include="Repositories\DocumentCommercialDetailSerieRepository.cs" />
+    <Compile Include="Repositories\DocumentCommercialRepository.cs" />
+    <Compile Include="Repositories\FamilleRepositoy.cs" />
     <Compile Include="Repositories\FichetierRepository.cs" />
     <Compile Include="Repositories\FichetiersContactRepository.cs" />
     <Compile Include="Repositories\FichetiersRepresentantRepository.cs" />
     <Compile Include="Repositories\FournisseurArticleRepository.cs" />
     <Compile Include="Repositories\GedRepository.cs" />
+    <Compile Include="Repositories\ImpressionRepository.cs" />
+    <Compile Include="Repositories\LicenceRepository.cs" />
+    <Compile Include="Repositories\MarqueRepository.cs" />
     <Compile Include="Repositories\MotifRepository.cs" />
     <Compile Include="Repositories\MotifTicketRepository.cs" />
     <Compile Include="Repositories\MouvementStockRepository.cs" />
@@ -132,6 +148,8 @@
     <Compile Include="Repositories\SocieteRepository.cs" />
     <Compile Include="Repositories\TicketDetailRepository.cs" />
     <Compile Include="Repositories\TicketRepository.cs" />
+    <Compile Include="Repositories\ToleranceRepository.cs" />
+    <Compile Include="Repositories\UniteRepository.cs" />
     <Compile Include="StoreEntities.cs" />
     <Compile Include="StoreSeedData.cs" />
   </ItemGroup>
