--- a/Store.Model/Store.Model.csproj
+++ b/Store.Model/Store.Model.csproj
@@ -40,13 +40,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\Admin.cs" />
-    <Compile Include="Models\Affaire.cs" />
-    <Compile Include="Models\GES_Article.cs" />
-    <Compile Include="Models\ArticlesKit.cs" />
-    <Compile Include="Models\ArticlesPrix.cs" />
-    <Compile Include="Models\Categorie.cs" />
-    <Compile Include="Models\Constantes.cs" />
     <Compile Include="Models\CPT_Classe.cs" />
     <Compile Include="Models\CPT_CodesTVA.cs" />
     <Compile Include="Models\CPT_CompteG.cs" />
@@ -64,36 +57,22 @@
     <Compile Include="Models\CPT_RelevesBancaires.cs" />
     <Compile Include="Models\CPT_RelevesBancairesDetail.cs" />
     <Compile Include="Models\CPT_TVALettrage.cs" />
+    <Compile Include="Models\GEN_Devises.cs" />
     <Compile Include="Models\GES_Admin.cs" />
     <Compile Include="Models\GES_Affaire.cs" />
-    <Compile Include="Models\GES_Article.cs" />
+    <Compile Include="Models\GES_Articles.cs" />
     <Compile Include="Models\GES_ArticlesKit.cs" />
     <Compile Include="Models\GES_ArticlesPrix.cs" />
     <Compile Include="Models\GES_Categorie.cs" />
-    <Compile Include="Models\CrmContact.cs" />
     <Compile Include="Models\GES_Depot.cs" />
-    <Compile Include="Models\DepotContact.cs" />
-    <Compile Include="Models\Devise.cs" />
     <Compile Include="Models\GES_Doclie.cs" />
     <Compile Include="Models\GES_Doclieart.cs" />
     <Compile Include="Models\GES_DocumentCommercial.cs" />
     <Compile Include="Models\GES_DocumentCommercialDetail.cs" />
     <Compile Include="Models\GES_DocumentCommercialDetailSerie.cs" />
     <Compile Include="Models\GES_Famille.cs" />
-    <Compile Include="Models\Fichetier.cs" />
-    <Compile Include="Models\FichetiersRepresentant.cs" />
-    <Compile Include="Models\FichetiersContact.cs" />
-    <Compile Include="Models\FournisseurArticle.cs" />
-    <Compile Include="Models\Ged.cs" />
-    <Compile Include="Models\Doclie.cs" />
-    <Compile Include="Models\Doclieart.cs" />
-    <Compile Include="Models\DocumentCommercial.cs" />
-    <Compile Include="Models\DocumentCommercialDetail.cs" />
-    <Compile Include="Models\DocumentCommercialDetailSerie.cs" />
-    <Compile Include="Models\Famille.cs" />
     <Compile Include="Models\GES_FournisseurArticle.cs" />
     <Compile Include="Models\GES_Ged.cs" />
-    <Compile Include="Models\GEN_Devises.cs" />
     <Compile Include="Models\GEN_Documents.cs" />
     <Compile Include="Models\GEN_Dossiers.cs" />
     <Compile Include="Models\GEN_DossiersContacts.cs" />
@@ -110,9 +89,6 @@
     <Compile Include="Models\GEN_TiersContacts.cs" />
     <Compile Include="Models\GEN_TypePaiement.cs" />
     <Compile Include="Models\GEN_TypePaiementDetail.cs" />
-    <Compile Include="Models\Impression.cs" />
-    <Compile Include="Models\Licence.cs" />
-    <Compile Include="Models\Marque.cs" />
     <Compile Include="Models\GES_Motif.cs" />
     <Compile Include="Models\GES_MotifTicket.cs" />
     <Compile Include="Models\GES_MouvementStock.cs" />
@@ -127,31 +103,9 @@
     <Compile Include="Models\GES_Representant.cs" />
     <Compile Include="Models\GES_Ticket.cs" />
     <Compile Include="Models\GES_TicketDetail.cs" />
-    <Compile Include="Models\Tolerance.cs" />
-    <Compile Include="Models\Tva.cs" />
-    <Compile Include="Models\Unite.cs" />
     <Compile Include="Models\GES_Impression.cs" />
     <Compile Include="Models\GES_Licence.cs" />
     <Compile Include="Models\GES_Marque.cs" />
-    <Compile Include="Models\Motif.cs" />
-    <Compile Include="Models\MotifTicket.cs" />
-    <Compile Include="Models\MouvementStock.cs" />
-    <Compile Include="Models\Nomenclature.cs" />
-    <Compile Include="Models\Numerotation.cs" />
-    <Compile Include="Models\Objectif.cs" />
-    <Compile Include="Models\Opportunite.cs" />
-    <Compile Include="Models\OpportuniteDetail.cs" />
-    <Compile Include="Models\Paiement.cs" />
-    <Compile Include="Models\Parametrage.cs" />
-    <Compile Include="Models\Periode.cs" />
-    <Compile Include="Models\Profil.cs" />
-    <Compile Include="Models\ProfilDetail.cs" />
-    <Compile Include="Models\Reglement.cs" />
-    <Compile Include="Models\ReglementFacture.cs" />
-    <Compile Include="Models\Representant.cs" />
-    <Compile Include="Models\Societe.cs" />
-    <Compile Include="Models\Ticket.cs" />
-    <Compile Include="Models\TicketDetail.cs" />
     <Compile Include="Models\GES_Tolerance.cs" />
     <Compile Include="Models\Ges_Tva.cs" />
     <Compile Include="Models\GES_Unite.cs" />
