--- a/Store.Data/Store.Data.csproj
+++ b/Store.Data/Store.Data.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Configuration\GEN_DossiersConfiguration.cs" />
     <Compile Include="Configuration\GEN_TypePaiementDetailConfiguration.cs" />
     <Compile Include="Configuration\ToleranceConfiguration.cs" />
     <!--<<<<<<< HEAD-->
@@ -73,28 +74,23 @@
     <Compile Include="Configuration\FamilleConfiguration.cs" />
     <!-->>>>>>> 2267e92627d70391d6d45f5590325e078926f7fb-->
     <Compile Include="Configuration\GEN_TiersContactsConfiguration.cs" />
-    <Compile Include="Configuration\FichetiersRepresentantsConfiguration.cs" />
     <Compile Include="Configuration\GES_FournisseurArticleConfiguration.cs" />
     <Compile Include="Configuration\GES_GedConfiguration.cs" />
     <Compile Include="Configuration\GES_MotifConfiguration.cs" />
     <Compile Include="Configuration\GES_MotifTicketConfiguration.cs" />
     <Compile Include="Configuration\GES_MouvementStockConfiguration.cs" />
-    <Compile Include="Configuration\NomenclatureConfiguration.cs" />
-    <Compile Include="Configuration\NumerotationConfiguration.cs" />
-    <Compile Include="Configuration\ObjectifConfiguration.cs" />
-    <Compile Include="Configuration\OpportuniteConfiguration.cs" />
-    <Compile Include="Configuration\OpportuniteDetailConfiguration.cs" />
+    <Compile Include="Configuration\GES_NomenclatureConfiguration.cs" />
+    <Compile Include="Configuration\GES_NumerotationConfiguration.cs" />
+    <Compile Include="Configuration\GES_ObjectifConfiguration.cs" />
+    <Compile Include="Configuration\GES_OpportuniteConfiguration.cs" />
+    <Compile Include="Configuration\GES_OpportuniteDetailConfiguration.cs" />
     <Compile Include="Configuration\GEN_TypePaiementConfiguration.cs" />
-    <Compile Include="Configuration\ParametrageConfiguration.cs" />
-    <Compile Include="Configuration\PeriodeConfiguration.cs" />
-    <Compile Include="Configuration\ProfilConfiguration.cs" />
-    <Compile Include="Configuration\ProfilDetailConfiguration.cs" />
-    <Compile Include="Configuration\ReglementConfiguration.cs" />
-    <Compile Include="Configuration\ReglementFactureConfiguration.cs" />
-    <Compile Include="Configuration\RepresentantConfiguration.cs" />
-    <Compile Include="Configuration\SocieteConfiguration.cs" />
-    <Compile Include="Configuration\TicketConfiguration.cs" />
-    <Compile Include="Configuration\TicketDetailConfiguration.cs" />
+    <Compile Include="Configuration\GES_PeriodeConfiguration.cs" />
+    <Compile Include="Configuration\GES_ReglementConfiguration.cs" />
+    <Compile Include="Configuration\GES_ReglementFactureConfiguration.cs" />
+    <Compile Include="Configuration\GES_RepresentantConfiguration.cs" />
+    <Compile Include="Configuration\GES_TicketConfiguration.cs" />
+    <Compile Include="Configuration\GES_TicketDetailConfiguration.cs" />
     <Compile Include="Infrastructure\DbFactory.cs" />
     <Compile Include="Infrastructure\Disposable.cs" />
     <Compile Include="Infrastructure\IDbFactory.cs" />
@@ -109,9 +105,8 @@
     <Compile Include="Configuration\UniteConfiguration.cs" />
     <!-->>>>>>> 2267e92627d70391d6d45f5590325e078926f7fb-->
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\FichetierRepository.cs" />
-    <Compile Include="Repositories\FichetiersContactRepository.cs" />
-    <Compile Include="Repositories\FichetiersRepresentantRepository.cs" />
+    <Compile Include="Repositories\TiersRepository.cs" />
+    <Compile Include="Repositories\TiersContactRepository.cs" />
     <Compile Include="Repositories\FournisseurArticleRepository.cs" />
     <Compile Include="Repositories\GedRepository.cs" />
     <Compile Include="Repositories\MotifRepository.cs" />
@@ -123,14 +118,11 @@
     <Compile Include="Repositories\OpportuniteDetailRepository.cs" />
     <Compile Include="Repositories\OpportuniteRepository.cs" />
     <Compile Include="Repositories\PaiementRepository.cs" />
-    <Compile Include="Repositories\ParametrageRepository.cs" />
     <Compile Include="Repositories\PeriodeRepository.cs" />
-    <Compile Include="Repositories\ProfilDetailRepository.cs" />
-    <Compile Include="Repositories\ProfilRepository.cs" />
     <Compile Include="Repositories\ReglementFactureRepository.cs" />
     <Compile Include="Repositories\ReglementRepository.cs" />
     <Compile Include="Repositories\RepresentantRepository.cs" />
-    <Compile Include="Repositories\SocieteRepository.cs" />
+    <Compile Include="Repositories\DossiersRepository.cs" />
     <Compile Include="Repositories\TicketDetailRepository.cs" />
     <Compile Include="Repositories\TicketRepository.cs" />
     <Compile Include="StoreEntities.cs" />
