--- a/Store.Data/Store.Data.csproj
+++ b/Store.Data/Store.Data.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Configuration\CPT_CodesTVAConfiguration.cs" />
     <Compile Include="Configuration\GEN_DossiersConfiguration.cs" />
     <Compile Include="Configuration\GES_ToleranceConfiguration.cs" />
     <Compile Include="Configuration\GEN_TypePaiementDetailConfiguration.cs" />
@@ -115,9 +116,6 @@
     <Compile Include="Repositories\DocumentCommercialDetailSerieRepository.cs" />
     <Compile Include="Repositories\DocumentCommercialRepository.cs" />
     <Compile Include="Repositories\FamilleRepositoy.cs" />
-    <Compile Include="Repositories\FichetierRepository.cs" />
-    <Compile Include="Repositories\FichetiersContactRepository.cs" />
-    <Compile Include="Repositories\FichetiersRepresentantRepository.cs" />
     <Compile Include="Repositories\TiersRepository.cs" />
     <Compile Include="Repositories\TiersContactRepository.cs" />
     <Compile Include="Repositories\FournisseurArticleRepository.cs" />
