--- a/Store.Service/Store.Service.csproj
+++ b/Store.Service/Store.Service.csproj
@@ -68,10 +68,84 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Implementation\FournisseurArticleService.cs" />
+    <Compile Include="Implementation\GedService.cs" />
+    <Compile Include="Interface\IMarqueService.cs" />
+    <Compile Include="Interface\IMotifService.cs" />
+    <Compile Include="Interface\IMotifTicketService.cs" />
+    <Compile Include="Interface\IMouvementStockService.cs" />
+    <Compile Include="Interface\INomenclatureService.cs" />
+    <Compile Include="Interface\INumerotationService.cs" />
+    <Compile Include="Interface\IObjectifService.cs" />
+    <Compile Include="Interface\IOpportuniteService.cs" />
+    <Compile Include="Interface\IPeriodeService.cs" />
+    <Compile Include="Interface\IReglementFactureService.cs" />
+    <Compile Include="Interface\IReglementService.cs" />
+    <Compile Include="Interface\IRepresentantService.cs" />
+    <Compile Include="Interface\ITicketDetailService.cs" />
+    <Compile Include="Interface\ITicketService.cs" />
+    <Compile Include="Interface\IToleranceService.cs" />
+    <Compile Include="Interface\IUniteService.cs" />
+    <Compile Include="Implementation\LicenceService.cs" />
+    <Compile Include="Interface\IFournisseurArticleService.cs" />
+    <Compile Include="Interface\IGedService.cs" />
+    <Compile Include="Interface\IImpressionService.cs" />
+    <Compile Include="Implementation\ImpressionService.cs" />
+    <Compile Include="Interface\ILicenceService.cs" />
+    <Compile Include="Implementation\MarqueService.cs" />
+    <Compile Include="Implementation\MotifService.cs" />
+    <Compile Include="Implementation\MotifTicketService.cs" />
+    <Compile Include="Implementation\MouvementStockService.cs" />
+    <Compile Include="Implementation\NomenclatureService.cs" />
+    <Compile Include="Implementation\NumerotationService.cs" />
+    <Compile Include="Implementation\ObjectifService.cs" />
+    <Compile Include="Implementation\OpportuniteService.cs" />
+    <Compile Include="Implementation\PeriodeService.cs" />
+    <Compile Include="Pivot\FournisseurArticlePivot.cs" />
+    <Compile Include="Pivot\GedPivot.cs" />
+    <Compile Include="Pivot\OpportuniteDetailPivot.cs" />
+    <Compile Include="Pivot\ImpressionPivot.cs" />
+    <Compile Include="Pivot\LicencePivot.cs" />
+    <Compile Include="Pivot\MarquePivot.cs" />
+    <Compile Include="Pivot\MotifPivot.cs" />
+    <Compile Include="Pivot\MotifTicketPivot.cs" />
+    <Compile Include="Pivot\MouvementStockPivot.cs" />
+    <Compile Include="Pivot\NomenclaturePivot.cs" />
+    <Compile Include="Pivot\NumerotationPivot.cs" />
+    <Compile Include="Pivot\ObjectifPivot.cs" />
+    <Compile Include="Pivot\OpportunitePivot.cs" />
+    <Compile Include="Pivot\PeriodePivot.cs" />
+    <Compile Include="Pivot\ReglementFacturePivot.cs" />
+    <Compile Include="Pivot\ReglementPivot.cs" />
+    <Compile Include="Pivot\RepresentantPivot.cs" />
+    <Compile Include="Pivot\TicketDetailPivot.cs" />
+    <Compile Include="Pivot\TicketPivot.cs" />
+    <Compile Include="Pivot\TolerancePivot.cs" />
+    <Compile Include="Pivot\UnitePivot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Implementation\ReglementFactureService.cs" />
+    <Compile Include="Implementation\ReglementService.cs" />
+    <Compile Include="Implementation\RepresentantService.cs" />
+    <Compile Include="Implementation\TicketDetailService.cs" />
+    <Compile Include="Implementation\TicketService.cs" />
+    <Compile Include="Implementation\ToleranceService.cs" />
+    <Compile Include="Implementation\UniteService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Store.Data\Store.Data.csproj">
+      <Project>{ea59312b-b184-4ed6-a452-86b9f6b0f499}</Project>
+      <Name>Store.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Store.Model\Store.Model.csproj">
+      <Project>{ed1007b2-1f19-4a8b-8b98-1e24b4b4cf2b}</Project>
+      <Name>Store.Model</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Mapping\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
