--- a/Store.Service/Store.Service.csproj
+++ b/Store.Service/Store.Service.csproj
@@ -101,8 +101,14 @@
     <Compile Include="Implementation\ObjectifService.cs" />
     <Compile Include="Implementation\OpportuniteService.cs" />
     <Compile Include="Implementation\PeriodeService.cs" />
+    <Compile Include="Pivot\DocumentsPivot.cs" />
+    <Compile Include="Pivot\DossiersSitesPivot.cs" />
+    <Compile Include="Pivot\ExercicesPivot.cs" />
     <Compile Include="Pivot\FournisseurArticlePivot.cs" />
     <Compile Include="Pivot\GedPivot.cs" />
+    <Compile Include="Pivot\ItemsPivot.cs" />
+    <Compile Include="Pivot\ModelPivot.cs" />
+    <Compile Include="Pivot\NumerationPivot.cs" />
     <Compile Include="Pivot\OpportuniteDetailPivot.cs" />
     <Compile Include="Pivot\ImpressionPivot.cs" />
     <Compile Include="Pivot\LicencePivot.cs" />
@@ -115,9 +121,13 @@
     <Compile Include="Pivot\ObjectifPivot.cs" />
     <Compile Include="Pivot\OpportunitePivot.cs" />
     <Compile Include="Pivot\PeriodePivot.cs" />
+    <Compile Include="Pivot\PeriodesPivot.cs" />
+    <Compile Include="Pivot\PreferencesPivot.cs" />
+    <Compile Include="Pivot\RegelementPivot.cs" />
     <Compile Include="Pivot\ReglementFacturePivot.cs" />
     <Compile Include="Pivot\ReglementPivot.cs" />
     <Compile Include="Pivot\RepresentantPivot.cs" />
+    <Compile Include="Pivot\SocietesPivot.cs" />
     <Compile Include="Pivot\TicketDetailPivot.cs" />
     <Compile Include="Pivot\TicketPivot.cs" />
     <Compile Include="Pivot\TolerancePivot.cs" />
